--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -9,7 +9,26 @@ author_profile: true
     <body>
         <!-- for submit button -->
         <script language="javascript" type="text/javascript">
-            
+            // initialize
+            var background = '0';
+            var p_1_1 = '0';
+            var r_1_1 = '0';
+            var c_1_1 = '0';
+            var p_1_2 = '0';
+            var r_1_2 = '0';
+            var c_1_2 = '0';
+            var p_1_3 = '0';
+            var r_1_3 = '0';
+            var c_1_3 = '0';
+            var p_2_1 = '0';
+            var r_2_1 = '0';
+            var c_2_1 = '0';
+            var p_2_2 = '0';
+            var r_2_2 = '0';
+            var c_2_2 = '0';
+            var p_2_3 = '0';
+            var r_2_3 = '0';
+            var c_2_3 = '0';
 
             function myGetItem() {
                 // back ground
@@ -284,6 +303,6 @@ author_profile: true
                 After you press the button, this page will refresh and you can directly enjoy the other samples!
             </strong>
         </p>
-        <button type="submit" onclick="myGetItem()">Submit</button>
+        <button type="submit" onclick="myPostToGoogle()">Submit</button>
     </body>
 </html>
