--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -229,10 +229,11 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            alert('test');
+            console.log("test2");
         </script>
         
         <!-- description -->
+        console.log("test1");
         <h1>🎹 Pop Piano Music Generation via Transformer</h1>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
