--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -209,6 +209,7 @@ author_profile: true
             };
             var sampleIndex1 = myGetRandom(0, 49);
             var sampleIndex2 = myGetRandom(0, 49);
+            console.log(sampleIndex1);
             // initialize
             var background = '0';
             var p_1_1 = '0';
@@ -229,11 +230,10 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log("test2");
+            console.log(sampleIndex2);
         </script>
         
         <!-- description -->
-        console.log("test1");
         <h1>🎹 Pop Piano Music Generation via Transformer</h1>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
