--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -89,7 +89,6 @@ author_profile: true
                     c_2_1 = handler[i].value; 
                 };
 
-                // p-2.2
                 var handler = document.getElementsByName("pleasant-2.2");
                 for(var i=0;i< handler.length;i++) { 
                     if(handler[i].checked) 
@@ -199,6 +198,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
+            console.log(background)
         </script>
         
         <!-- description -->
