--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -125,7 +125,13 @@ author_profile: true
                     c_2_3 = handler[i].value; 
                 };
 
-                myPostToGoogle();
+                if (background == '0' || p_1_1 == '0' || r_1_1 == '0' || c_1_1 == '0' || p_1_2 == '0' || r_1_2 == '0' || c_1_2 == '0' || p_1_3 == '0' || r_1_3 == '0' || c_1_3 == '0' || p_2_1 == '0' || r_2_1 == '0' || c_2_1 == '0' || p_2_2 == '0' || r_2_2 == '0' || c_2_2 == '0' || p_2_3 == '0' || r_2_3 == '0' || c_2_3 == '0') {
+                    alert("Warning! You haven't finish some options!!");
+                } else {
+                    myPostToGoogle();
+                    alert('Thanks you!');
+                    window.location.reload();
+                };
             };
         </script>
         
@@ -178,7 +184,7 @@ author_profile: true
                 return r
             };
             var sampleIndex1 = myGetRandom(0, 49);
-            var sampleIndex2 = myGetRandom(0, 49);
+            var sampleIndex2 = myGetRandom(50, 99);
             var background = '0';
             var p_1_1 = '0';
             var r_1_1 = '0';
@@ -198,7 +204,6 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log(background)
         </script>
         
         <!-- description -->
