--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -158,7 +158,7 @@ author_profile: true
                         "entry.637482833": c_2_3
                     },
                     type: "POST",
-                    dataType: "xml",
+                    dataType: "jsonp",
                     statusCode: {
                         0: function() {
                         },
@@ -198,6 +198,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
+            console.log('0')
         </script>
         
         <!-- description -->
