--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -133,7 +133,7 @@ author_profile: true
         <script language="javascript" type="text/javascript">
             function myPostToGoogle() {
                 $.ajax({
-                    crossDomain: True,
+                    crossDomain: true,
                     url: "https://forms.gle/W89ZdPA5ihHqS2oGA",
                     data: {
                         "entry.1117893682": background,
@@ -199,7 +199,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('1')
+            console.log('0')
         </script>
         
         <!-- description -->
