--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -159,7 +159,7 @@ author_profile: true
                         "entry.637482833": c_2_3
                     },
                     type: "POST",
-                    dataType: "xml",
+                    dataType: "jsonp",
                     statusCode: {
                         0: function() {
                         },
@@ -199,7 +199,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('0')
+            console.log('1')
         </script>
         
         <!-- description -->
