--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -134,7 +134,7 @@ author_profile: true
             function myPostToGoogle() {
                 $.ajax({
                     crossDomain: true,
-                    url: "https://forms.gle/W89ZdPA5ihHqS2oGA",
+                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform?usp=sf_link",
                     data: {
                         "entry.1117893682": background,
                         "entry.931457378": sampleIndex1,
@@ -159,7 +159,7 @@ author_profile: true
                         "entry.637482833": c_2_3
                     },
                     type: "POST",
-                    dataType: "jsonp",
+                    dataType: "xml",
                     statusCode: {
                         0: function() {
                         },
@@ -199,7 +199,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('1')
+            console.log('0')
         </script>
         
         <!-- description -->
