--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -133,8 +133,7 @@ author_profile: true
         <script language="javascript" type="text/javascript">
             function myPostToGoogle() {
                 $.ajax({
-                    crossDomain: true,
-                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform?usp=sf_link",
+                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/formresponse",
                     data: {
                         "entry.1117893682": background,
                         "entry.931457378": sampleIndex1,
@@ -199,7 +198,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('0')
+            console.log('1')
         </script>
         
         <!-- description -->
