--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -133,7 +133,7 @@ author_profile: true
         <script language="javascript" type="text/javascript">
             function myPostToGoogle() {
                 $.ajax({
-                    url: "https://docs.google.com/forms/d/e/1FAIpQLSeb0Dz_tRzTmZ21jXV66PQ1xrQqeCPk6TISAGQh9b_0GtuhTg/v",
+                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform?usp=sf_link",
                     data: {
                         "entry.1117893682": background,
                         "entry.931457378": sampleIndex1,
@@ -157,8 +157,8 @@ author_profile: true
                         "entry.631550444": r_2_3,
                         "entry.637482833": c_2_3
                     },
-                    type: "POST",
-                    dataType: "xml",
+                    type: "GET",
+                    dataType: "jsonp",
                     statusCode: {
                         0: function() {
                         },
@@ -198,7 +198,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('2')
+            console.log('0')
         </script>
         
         <!-- description -->
