--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -157,7 +157,7 @@ author_profile: true
                         "entry.631550444": r_2_3,
                         "entry.637482833": c_2_3
                     },
-                    type: "GET",
+                    type: "POST",
                     dataType: "jsonp",
                     statusCode: {
                         0: function() {
@@ -198,7 +198,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('0')
+            console.log('1')
         </script>
         
         <!-- description -->
