--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -130,10 +130,10 @@ author_profile: true
         </script>
         
         <!-- for google form submit -->
-        <script language="javascript" type="text/javascript">
+        <script language="javascript" type="text/javascript" crossorigin="anonymous">
             function myPostToGoogle() {
                 $.ajax({
-                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform?usp=sf_link",
+                    url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform",
                     data: {
                         "entry.1117893682": background,
                         "entry.931457378": sampleIndex1,
@@ -158,7 +158,7 @@ author_profile: true
                         "entry.637482833": c_2_3
                     },
                     type: "POST",
-                    dataType: "jsonp",
+                    dataType: "xml",
                     statusCode: {
                         0: function() {
                         },
