--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -130,9 +130,12 @@ author_profile: true
         </script>
         
         <!-- for google form submit -->
-        <script language="javascript" type="text/javascript" crossorigin="anonymous">
+        <script language="javascript" type="text/javascript">
             function myPostToGoogle() {
                 $.ajax({
+                    headers: {
+                        'Access-Control-Allow-Origin': *,
+                    },
                     url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform",
                     data: {
                         "entry.1117893682": background,
@@ -198,7 +201,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('1')
+            console.log('2')
         </script>
         
         <!-- description -->
