--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -134,7 +134,7 @@ author_profile: true
             function myPostToGoogle() {
                 $.ajax({
                     headers: {
-                        'Access-Control-Allow-Origin': *,
+                        'Access-Control-Allow-Origin': '*',
                     },
                     url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform",
                     data: {
@@ -201,7 +201,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('2')
+            console.log('3')
         </script>
         
         <!-- description -->
