--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -133,8 +133,8 @@ author_profile: true
         <script language="javascript" type="text/javascript">
             function myPostToGoogle() {
                 $.ajax({
-                    headers: {
-                        'Access-Control-Allow-Origin': '*',
+                    beforeSend: function(request) {
+                        request.setRequestHeader('Access-Control-Allow-Origin', *);
                     },
                     url: "https://docs.google.com/forms/d/e/1FAIpQLSdwycjfSrN5IX6ir2CXEQg5HUrmvStIRXFeMAKDehsBSkq4Vg/viewform",
                     data: {
@@ -201,7 +201,7 @@ author_profile: true
             var p_2_3 = '0';
             var r_2_3 = '0';
             var c_2_3 = '0';
-            console.log('3')
+            console.log('1')
         </script>
         
         <!-- description -->
